Fixing mobile overflow

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -72,6 +72,7 @@ article {
 
 .post-tag-container {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 4px;
 
   .post-tag {
